[metadata]
name = pykeyrock
author = Massimo Gaggero
author_email = massimo.gaggero@crs4.it
description = Python library for the management of FIWARE Keyrock IDM.
long_description = file: README.md
long_description_content_type = text/markdown
license = LICENSE
url = https://github.com/tdm-project/pykeyrock
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Information Technology
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
